force-app/main/default/objects/Material_Inspection_with_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Discipline</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Inspection_FAT_SAT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Inspection (FAT/SAT)</label>
        <referenceTo>Material_Inspection_FAT_SAT__c</referenceTo>
        <relationshipName>Material_Inspection_with_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Inspection__c</fullName>
        <label>Material Inspection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting to Confirm</fullName>
                    <default>true</default>
                    <label>Waiting to Confirm</label>
                </value>
                <value>
                    <fullName>FAT (Factory Acceptance Test)</fullName>
                </value>
                <value>
                    <fullName>SAT (Site Acceptance Test)</fullName>
                </value>
                <value>
                    <fullName>FAT and SAT</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Material Inspection with Equipment*</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>